assets/css/style.css
body {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
}
.cyan-highlight {
    color: #23BCBA;
    font-weight: 600;
}
.dark-cyan-highlight {
    color: #0D7D7B;
    font-weight: 600;
}
.red-highlight {
    color: #DB5561;
    font-weight: 600;
}
.btn-primary,
.btn-primary:hover,
.btn-primary:active,
.btn-primary:visited,
.btn-primary:focus {
    background-color: #DB5561;
    border-color: #DB5561;
}
.text-p {
    font-size: 12px;
}
.container-screenheight {
    min-height: 100vh;
}
.navbar {
    position: fixed;
    top: 0;
    display: flex;
    justify-content: space-between;
    z-index: 1;
    padding-top: 10px;
}
#navbarNav {
    background-color: white;
    padding-right: 20px;
    border-radius: 20px;
}
.navbar-nav {
    display: flex;
    flex-direction: row;
    
}
.nav-item {
    margin-left: 15px;
    font-size: 15px;
}
.landing {
    padding-top: 100px;
}

.navbar a {
    color: #50474A;
}
.navbar a:hover {
    color: #DB5561;
}

.page-header {
    color: #DB5561;
    font-weight: 600;
    font-size: 35px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}
.cover-container {
    height: 20vh;
    overflow: hidden; 
    background-size: cover;
    background-repeat: no-repeat;   
    margin: auto;
}

/* form {
    border: #23BCBA solid 2px; 
    border-radius: 20px;
} */
input {
    outline: none;
    border: none;
    border-bottom: #afafaf solid 2px;
}
input:focus {
    border-bottom: #DB5561 solid 2px;
}
textarea {
    outline: none;
    border: #afafaf solid 2px;
}
textarea:focus {
    border: #DB5561 solid 2px;
}

@media only screen and (min-width: 375px) {
    .text-p {
        font-size: 14px;
    }
    .page-header {
        font-size: 50px;
    }
}
@media only screen and (min-width: 768px) {
    #logo-img {
        margin-left:20px;
    }
    .nav-item {
        font-size: 16px;
    }
}

